Correct embed part2

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <h2 class="s-head" style="padding-left: 0%;">
                                 Check out our product demo
                             </h2>
-                            <iframe class="img-cont" src="https://www.youtube.com/embed/watch?v=pB4fIO2IamY" frameborder="0" allowfullscreen></iframe>
+                            <iframe class="img-cont" src="https://www.youtube.com/embed/pB4fIO2IamY" frameborder="0" allowfullscreen></iframe>
                             <p class="modal-sect" style="padding-top: 0%; padding-left: 0%;">
                                 hngr is a project i worked on for my Computer Science Capstone senior project. It is a peer-to-peer 
                                 restaurant recommendation and review platform. hngr provides a social space for foodies to share and 
