--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         </a>
                     </div>
                     <div id="myModal3" class="modal">
-                        <div class="modal-content" style="height: 25%;">
+                        <div class="modal-content">
                             <span class="close">&times;</span>
                             <h2 class="s-head" style="padding-left: 0%;">
                                 About the project
@@ -245,7 +245,7 @@
                         </a>
                     </div>
                     <div id="myModal4" class="modal">
-                        <div class="modal-content" style="height: 20%;">
+                        <div class="modal-content" >
                             <span class="close">&times;</span>
                             <h2 class="s-head" style="padding-left: 0%;">
                                 About the project
@@ -281,7 +281,7 @@
                         </a>
                     </div>
                     <div id="myModal5" class="modal">
-                        <div class="modal-content" style="height: 20%;">
+                        <div class="modal-content">
                             <span class="close">&times;</span>
                             <h2 class="s-head" style="padding-left: 0%;">
                                 About the project
